Saved results for experiment 1 alpha 0.0 GA 2018 Income

--- a/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch1-Copy1.ipynb
+++ b/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch1-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f1f8e28c",
+   "id": "3c0a286b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "add08801",
+   "id": "a2461154",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "706095e5",
+   "id": "2009eb0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ac8be733",
+   "id": "637cbdc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3ae77ff7",
+   "id": "73d31d38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6bd7d910",
+   "id": "ce3e0400",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2c99e880",
+   "id": "f1c2d541",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a79ad4b",
+   "id": "0293ee0c",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "27ecd1bd",
+   "id": "05863e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "badb8933",
+   "id": "a2588a0b",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "927bf206",
+   "id": "9a194304",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
     "EXPERIMENT_NAME = 'mult_repair_levels_income_GA'\n",
     "DB_COLLECTION_NAME = 'exp_mult_repair_levels'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.4, 0.3, 0.2, 0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'folk_GA_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ad666c6",
+   "id": "b78a8b6b",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5cd02303",
+   "id": "696b78d9",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "052139b8",
+   "id": "68b0651e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5d6a9ec0",
+   "id": "5330752a",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0d140f4",
+   "id": "a4217bee",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "80828046",
+   "id": "b410d278",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a3499ea4",
+   "id": "fa478340",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a66f294d",
+   "id": "e77be7a6",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62ffd311",
+   "id": "cf0eb4e6",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c595fa3e",
+   "id": "0aa051af",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7d5ef4bb",
+   "id": "076be4d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9cb4092a",
+   "id": "1949afae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "17e8352f",
+   "id": "218074f5",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7bc3158",
+   "id": "e67501de",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4a75bdb7",
+   "id": "0bdc8e01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,9 +602,6 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.4_20230718__141431.csv',\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.3_20230718__141438.csv',\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.2_20230717__222835.csv',\n",
     "    'tuning_results_Folktables_GA_2018_Income_alpha_0.0_20230717__215443.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -618,15 +615,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8bcdb107",
+   "execution_count": 18,
+   "id": "731864bd",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-18 11:29:32 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
+      "2023-07-19 05:37:12 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
      ]
     },
     {
@@ -635,7 +632,7 @@
      "text": [
       "{'dataset_split_seed': 200,\n",
       " 'experiment_iteration': 'Exp_iter_2',\n",
-      " 'fair_intervention_params_lst': '[0.5, 0.6, 0.7, 0.8, 0.9, 1.0]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 200,\n",
       " 'session_uuid': '78c3da49-e095-43f3-8cc1-fa34bab0357c'}\n",
       "\n",
@@ -646,7 +643,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-18 11:29:32 experiment_interface.py INFO    : The dataset is preprocessed\n"
+      "2023-07-19 05:37:13 experiment_interface.py INFO    : The dataset is preprocessed\n"
      ]
     },
     {
@@ -666,12 +663,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24ef6d9bde97480f86e5ce5603a81eb9",
+       "model_id": "8a77c788c99142d598a191f010d9f2a1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Multiple alphas:   0%|          | 0/6 [00:00<?, ?it/s]"
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -681,28 +678,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.5\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-18 11:29:33 experiment_interface.py INFO    : Models config is loaded from the input file\n"
+      "2023-07-19 05:37:14 experiment_interface.py INFO    : Models config is loaded from the input file\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.5_20230718__102121.csv\n",
-      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 90, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 200, 'n_jobs': None, 'oob_score': False, 'random_state': 200, 'verbose': 0, 'warm_start': False}\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.0_20230717__215443.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 100, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 1000, 'n_jobs': None, 'oob_score': False, 'random_state': 200, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b0d9f488f034bf4bc7657f50514299d",
+       "model_id": "03b6f16f298e45228da35dc04a85c312",
        "version_major": 2,
        "version_minor": 0
       },
@@ -716,7 +713,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1df1057eeb4f4b7cbac7562b8eaaf6fd",
+       "model_id": "f3704a322221487e9a3b048938bbdea7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -730,109 +727,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f815771f7cdf4d419b5d48d2ab672826",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_param:  0.6\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.6_20230718__102049.csv\n",
-      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 70, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 5, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 200, 'n_jobs': None, 'oob_score': False, 'random_state': 201, 'verbose': 0, 'warm_start': False}\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8328e3931474f839ebf28f5785c1d55",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6b25b64374b4200b899fec393b8a424",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64a903ad1de840baa120a6ffce6a8395",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_param:  0.7\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.7_20230718__101840.csv\n",
-      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': None, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 200, 'n_jobs': None, 'oob_score': False, 'random_state': 201, 'verbose': 0, 'warm_start': False}\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0707ebd2a20456b9583b7ccd92bf481",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c9cd90ba67944959e4a14ecd6406b47",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe998e714a80464893bda7e9bd3824cc",
+       "model_id": "ec8ce33e19f34c04919892fda3db4aa5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -863,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ed36346",
+   "id": "f0794904",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -872,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8bfef816",
+   "id": "9577cf69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82894b12",
+   "id": "b328f955",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2fca1fb",
+   "id": "bb0dddd8",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1201,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "fffed366",
+   "id": "22e66533",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4b1f5369",
+   "id": "b6064dd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4b9e14e",
+   "id": "a5fb94f6",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1257,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb817bd4",
+   "id": "c3a9590d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93c89941",
+   "id": "d5dbc665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f8ee6fe",
+   "id": "4418dde4",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1313,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "595b5073",
+   "id": "0b7d354f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5583defb",
+   "id": "58fbf3a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f117d83",
+   "id": "c8bda3b0",
    "metadata": {},
    "outputs": [],
    "source": []
