--- a/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch1-Copy2.ipynb
+++ b/notebooks/mult_repair_levels_income_GA/Folk_GA_2018_Batch1-Copy2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b0e25f0a",
+   "id": "a394db4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "939d6c4a",
+   "id": "0810fe22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "75f96606",
+   "id": "8e96a68b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e8a96e18",
+   "id": "486c5f71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b7cda73a",
+   "id": "89113c04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a3785951",
+   "id": "1058ccb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cb241361",
+   "id": "12099886",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a8bdf86",
+   "id": "07e59cff",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "673610f6",
+   "id": "7b29d8ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "578705dc",
+   "id": "2e5feb06",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a25b6cd0",
+   "id": "0914ef5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
     "EXPERIMENT_NAME = 'mult_repair_levels_income_GA'\n",
     "DB_COLLECTION_NAME = 'exp_mult_repair_levels'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.4, 0.3, 0.2, 0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'folk_GA_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9de89cce",
+   "id": "252d76a2",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ce7ad14b",
+   "id": "7a9ae157",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0b8d1403",
+   "id": "00e31a78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "656bfc16",
+   "id": "78b86db7",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e56eddf1",
+   "id": "b250b677",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "aa0b474c",
+   "id": "9f30f8c9",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b3915a0e",
+   "id": "1b15520c",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9d998eec",
+   "id": "7f15d27d",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf366a6",
+   "id": "8733ff8a",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e982671",
+   "id": "a88f2e00",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "57c81097",
+   "id": "e37a74d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c3d18524",
+   "id": "401595c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6961dbe6",
+   "id": "45ef1051",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c121f628",
+   "id": "c6b9c905",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a0cd8c22",
+   "id": "e5d03a2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca3c8ae8",
+   "id": "001d92ea",
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "039f8bc6",
+   "id": "0e0c5ef6",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -871,8 +871,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "3468d60a",
+   "execution_count": 17,
+   "id": "b6525dd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,9 +880,6 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.4_20230718__141431.csv',\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.3_20230718__141438.csv',\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.2_20230717__222835.csv',\n",
     "    'tuning_results_Folktables_GA_2018_Income_alpha_0.0_20230717__215443.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -896,10 +893,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "49989c4c",
+   "execution_count": 18,
+   "id": "c1ec048a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-19 05:40:07 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_split_seed': 300,\n",
+      " 'experiment_iteration': 'Exp_iter_3',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'model_init_seed': 300,\n",
+      " 'session_uuid': '78c3da49-e095-43f3-8cc1-fa34bab0357c'}\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-19 05:40:07 experiment_interface.py INFO    : The dataset is preprocessed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top indexes of an X_test in a base flow dataset:  Int64Index([15600,  9192, 15929,  9841, 13477,  4588, 19303,  3778,  8371,\n",
+      "             8013, 11558,  2597, 19554, 13439,  8458, 10642, 11502, 14988,\n",
+      "            14354, 10879],\n",
+      "           dtype='int64')\n",
+      "Top indexes of an y_test in a base flow dataset:  Int64Index([15600,  9192, 15929,  9841, 13477,  4588, 19303,  3778,  8371,\n",
+      "             8013, 11558,  2597, 19554, 13439,  8458, 10642, 11502, 14988,\n",
+      "            14354, 10879],\n",
+      "           dtype='int64')\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "110cf0e9491e47158c9fc2d2085435b2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-19 05:40:08 experiment_interface.py INFO    : Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_income_GA/tuning_results_Folktables_GA_2018_Income_alpha_0.0_20230717__215443.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 100, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 1000, 'n_jobs': None, 'oob_score': False, 'random_state': 300, 'verbose': 0, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eddbc3dd5b0b4f9281dbdeacd6f461b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8fef164bdc54568971e1b450a7c3810",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c00a292ba2d4ce08289cf5445369bcc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "run_exp_iter_with_preprocessing_intervention(data_loader=exp_iter_data_loader,\n",
     "                                             experiment_seed=experiment_seed,\n",
@@ -919,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "459c9d08",
+   "id": "a2dfdbdf",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -928,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "977bf0fb",
+   "id": "8097a313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "13b35fca",
+   "id": "3eab08f8",
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e10ae96",
+   "id": "96b606f1",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1257,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c96b55b2",
+   "id": "f0ad33d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d8e3f9",
+   "id": "faf92102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e90af0bd",
+   "id": "90d3e635",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1313,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "685bf14a",
+   "id": "68f224e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac271cb1",
+   "id": "e53872f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc8bcbd1",
+   "id": "5660f254",
    "metadata": {},
    "outputs": [],
    "source": []
